--- a/css/style.production.css
+++ b/css/style.production.css
@@ -14,7 +14,7 @@ Secondary Color #ef9804
 
 * {
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 Body {
@@ -46,10 +46,13 @@ a {
 a:visited {
     color: #05676e;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
     /* No underlining when hovering over a link */
     text-decoration: none;
 }
+
 a:active {
     color: #357b70;
 }
@@ -62,12 +65,15 @@ button {
     text-decoration: none;
     padding: 10px;
     border-radius: 3px;
-    border-bottom: 2px solid rgba(0,0,0,0.3);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
-button:hover, button:focus {
+
+button:hover,
+button:focus {
     cursor: pointer;
     opacity: 0.8;
 }
+
 .button__secondary {
     background-color: #e0b354;
     color: #2b2b2b;
@@ -91,6 +97,7 @@ button:hover, button:focus {
     border-radius: 50%;
     height: auto;
 }
+
 .page-footer {
     clear: both;
 }
@@ -102,8 +109,8 @@ button:hover, button:focus {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     text-align: center;
 }
 
@@ -114,38 +121,46 @@ button:hover, button:focus {
     width: 100%;
     padding: 20px;
 }
+
 .divider {
     border-bottom: 1px solid #2b3c4c;
     margin: 0 3px;
 }
+
 .page-header__item {
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 200px;
-            flex: 0 1 200px;
+    -ms-flex: 0 1 200px;
+    flex: 0 1 200px;
 }
+
 .page-header__item:last-child {
     -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
     text-align: right;
 }
+
 .navigation-list {
     list-style-type: none;
 }
+
 .navigation-list li {
     display: inline-block;
     margin-left: 15px;
 }
+
 #logo {
     height: 70px;
     width: 200px;
     display: inline;
     float: left;
 }
+
 .grid__item {
     display: inline-block;
     width: 33%;
 }
+
 .grid {
     display: -ms-grid;
     display: grid;
@@ -155,12 +170,14 @@ button:hover, button:focus {
     padding: 20px;
     margin: 0;
 }
+
 .grid__item {
     background-color: lightgrey;
     width: auto;
     min-height: auto;
     margin: 0;
 }
+
 .grid__item:last-child {
     -ms-grid-column: 3;
     grid-column: 3 / 3;
@@ -176,24 +193,29 @@ button:hover, button:focus {
         grid-template-columns: 1fr;
     }
 }
+
 @media all and (min-width: 500px) and (max-width: 750px) {
     .grid {
         -ms-grid-columns: 1fr 20px 1fr;
         grid-template-columns: 1fr 1fr;
     }
 }
+
 @media all and (max-width: 750px) {
     .grid {
         grid-gap: 10px;
     }
+
     .grid__item:last-child {
         grid-column: auto / auto;
         grid-row: auto / auto;
     }
+
     h1 {
         font-size: 22px;
     }
 }
+
 .button {
     border: none;
     display: inline-block;
@@ -202,12 +224,13 @@ button:hover, button:focus {
     color: white;
     text-decoration: none;
     padding: 10px;
-    border-radius:  3px;
-    border-bottom: 2px solid rgba(0,0,0,0.3);
+    border-radius: 3px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
     -webkit-transition: 0.2s opacity;
     -o-transition: 0.2s opacity;
     transition: 0.2s opacity;
 }
+
 button {
     border: none;
     display: inline-block;
@@ -216,12 +239,13 @@ button {
     color: white;
     text-decoration: none;
     padding: 10px;
-    border-radius:  3px;
-    border-bottom: 2px solid rgba(0,0,0,0.3);
+    border-radius: 3px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
     -webkit-transition: 0.2s opacity;
     -o-transition: 0.2s opacity;
     transition: 0.2s opacity;
 }
+
 button:hover,
 button:focus,
 .button:hover,
@@ -229,82 +253,100 @@ button:focus,
     cursor: pointer;
     opacity: 0.8;
 }
+
 .about-me {
     max-width: 500px;
     text-align: center;
     margin: 0 auto;
 }
+
 @-webkit-keyframes color-change {
     0% {
         fill: #edc655;
     }
+
     50% {
         fill: #fcffad;
     }
+
     100% {
         fill: #f76414
     }
 }
+
 @keyframes color-change {
     0% {
         fill: #edc655;
     }
+
     50% {
         fill: #fcffad;
     }
+
     100% {
         fill: #f76414
     }
 }
+
 .sun {
     -webkit-animation: 4s color-change infinite alternate linear;
-            animation: 4s color-change infinite alternate linear;
+    animation: 4s color-change infinite alternate linear;
 }
+
 @-webkit-keyframes cloud-move {
     from {
         -webkit-transform: translate(0, 50px);
-                transform: translate(0, 50px);
+        transform: translate(0, 50px);
     }
+
     to {
         -webkit-transform: translate(200px, 50px);
-                transform: translate(200px, 50px)
+        transform: translate(200px, 50px)
     }
 }
+
 @keyframes cloud-move {
     from {
         -webkit-transform: translate(0, 50px);
-                transform: translate(0, 50px);
+        transform: translate(0, 50px);
     }
+
     to {
         -webkit-transform: translate(200px, 50px);
-                transform: translate(200px, 50px)
+        transform: translate(200px, 50px)
     }
 }
+
 .cloud-front {
     -webkit-animation: 30s cloud-move infinite alternate linear;
-            animation: 30s cloud-move infinite alternate linear;
+    animation: 30s cloud-move infinite alternate linear;
 }
+
 @-webkit-keyframes cloud-move-reverse {
     from {
         -webkit-transform: translate(446px, 48px);
-                transform: translate(446px, 48px);
+        transform: translate(446px, 48px);
     }
+
     to {
         -webkit-transform: translate(100px, 48px);
-                transform: translate(100px, 48px);
+        transform: translate(100px, 48px);
     }
 }
+
 @keyframes cloud-move-reverse {
     from {
         -webkit-transform: translate(446px, 48px);
-                transform: translate(446px, 48px);
+        transform: translate(446px, 48px);
     }
+
     to {
         -webkit-transform: translate(100px, 48px);
-                transform: translate(100px, 48px);
+        transform: translate(100px, 48px);
     }
 }
+
 .cloud-back {
     -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-            animation: 34s cloud-move-reverse infinite alternate linear;
+    animation: 34s cloud-move-reverse infinite alternate linear;
 }
