--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ Secondary Color #ef9804
     --primary-color: #357b70;
     --secondary-color: #e0b354;
     --dark-grey: #2b2b2b;
-    --light-grey: rgba(0,0,0,0.3);
+    --light-grey: rgba(0, 0, 0, 0.3);
     --linked-clicked-color: #05676e;
     --light-button-color: white;
     --border-color: #2b3c4c;
@@ -49,10 +49,13 @@ a {
 a:visited {
     color: var(--linked-clicked-color);
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
     /* No underlining when hovering over a link */
     text-decoration: none;
 }
+
 a:active {
     color: var(--primary-color);
 }
@@ -67,10 +70,13 @@ button {
     border-radius: 3px;
     border-bottom: 2px solid var(--light-grey);
 }
-button:hover, button:focus {
+
+button:hover,
+button:focus {
     cursor: pointer;
     opacity: 0.8;
 }
+
 .button__secondary {
     background-color: var(--secondary-color);
     color: var(--dark-grey);
@@ -94,6 +100,7 @@ button:hover, button:focus {
     border-radius: 50%;
     height: auto;
 }
+
 .page-footer {
     clear: both;
 }
@@ -110,34 +117,42 @@ button:hover, button:focus {
     width: 100%;
     padding: 20px;
 }
+
 .divider {
     border-bottom: 1px solid var(--border-color);
     margin: 0 3px;
 }
+
 .page-header__item {
     flex: 0 1 200px;
 }
+
 .page-header__item:last-child {
     flex-grow: 1;
     text-align: right;
 }
+
 .navigation-list {
     list-style-type: none;
 }
+
 .navigation-list li {
     display: inline-block;
     margin-left: 15px;
 }
+
 #logo {
     height: 70px;
     width: 200px;
     display: inline;
     float: left;
 }
+
 .grid__item {
     display: inline-block;
     width: 33%;
 }
+
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -145,12 +160,14 @@ button:hover, button:focus {
     padding: 20px;
     margin: 0;
 }
+
 .grid__item {
     background-color: lightgrey;
     width: auto;
     min-height: auto;
     margin: 0;
 }
+
 .grid__item:last-child {
     grid-column: 3 / 3;
     grid-row: 1 / 3;
@@ -162,24 +179,30 @@ button:hover, button:focus {
         grid-template-columns: 1fr;
     }
 }
+
 @media all and (min-width: 500px) and (max-width: 750px) {
     .grid {
         grid-template-columns: 1fr 1fr;
     }
 }
+
 @media all and (max-width: 750px) {
     .grid {
         grid-gap: 10px;
     }
+
     .grid__item:last-child {
         grid-column: auto / auto;
         grid-row: auto / auto;
     }
+
     h1 {
         font-size: 22px;
     }
 }
-.button, button {
+
+.button,
+button {
     border: none;
     display: inline-block;
     font-family: inherit;
@@ -187,10 +210,11 @@ button:hover, button:focus {
     color: white;
     text-decoration: none;
     padding: 10px;
-    border-radius:  3px;
+    border-radius: 3px;
     border-bottom: 2px solid var(--light-grey);
     transition: 0.2s opacity;
 }
+
 button:hover,
 button:focus,
 .button:hover,
@@ -198,44 +222,55 @@ button:focus,
     cursor: pointer;
     opacity: 0.8;
 }
+
 .about-me {
     max-width: 500px;
     text-align: center;
     margin: 0 auto;
 }
+
 @keyframes color-change {
     0% {
         fill: #edc655;
     }
+
     50% {
         fill: #fcffad;
     }
+
     100% {
         fill: #f76414
     }
 }
+
 .sun {
     animation: 4s color-change infinite alternate linear;
 }
+
 @keyframes cloud-move {
     from {
         transform: translate(0, 50px);
     }
+
     to {
         transform: translate(200px, 50px)
     }
 }
+
 .cloud-front {
     animation: 30s cloud-move infinite alternate linear;
 }
+
 @keyframes cloud-move-reverse {
     from {
         transform: translate(446px, 48px);
     }
+
     to {
         transform: translate(100px, 48px);
     }
 }
+
 .cloud-back {
     animation: 34s cloud-move-reverse infinite alternate linear;
 }
